Minor doccs update
